--- a/src/app/pages/create/create-advertisement-page/create-advertisement-page.scss
+++ b/src/app/pages/create/create-advertisement-page/create-advertisement-page.scss
@@ -14,3 +14,22 @@
 .send-button{
   margin-top: 30px;
 }
+
+.choose-type{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.choose-create-type{
+  display: flex;
+  justify-content: center;
+  width: 150px;
+}
+
+.choose-type-button{
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
