--- a/src/app/common-ui/profile-card/profile-card.scss
+++ b/src/app/common-ui/profile-card/profile-card.scss
@@ -1,23 +1,37 @@
 .main-container{
   display: flex;
   flex-direction: row;
-  gap: 21px
+  gap: 20px
 }
 
 .avatar{
-  margin-top: 21px;
 }
 
 .rating {
   fill: currentColor;
-  font-size: 0.4rem;
-  inline-size: 7rem;
+  font-size: 0.3rem;
+  inline-size: 5rem;
+  margin-top: 10px;
 }
 
 .profile-text{
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  font-size: 20px;
+  font-weight: 700;
+
 }
+
+.reviews-count{
+  font-size: 14px;
+  font-weight: 700;
+  color: #474747;
+}
+
 .seller-name{
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
