--- a/src/app/pages/feed-page/feed-page.scss
+++ b/src/app/pages/feed-page/feed-page.scss
@@ -61,3 +61,60 @@
   padding: 20px;
 }
 
+.profile-button{
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.text-price{
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.swipe-left{
+  animation: swipeLeft 0.3s ease-in-out forwards;
+}
+
+.swipe-left{
+  animation: swipeRight 0.3s ease-in-out forwards;
+}
+
+.swipe-left {
+  animation: swipeLeft 0.5s ease-out forwards;
+}
+
+.swipe-right {
+  animation: swipeRight 0.5s ease-out forwards;
+}
+
+.swiping {
+  pointer-events: none;
+}
+
+@keyframes swipeLeft {
+  0% {
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateX(-100vw) rotate(-20deg);
+    opacity: 0;
+  }
+}
+
+@keyframes swipeRight {
+  0% {
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateX(100vw) rotate(20deg);
+    opacity: 0;
+  }
+}
