--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -1,5 +1,12 @@
-<app-search></app-search>
+<div class="main-container">
+  <div class="container">
+    <app-search></app-search>
 
-<app-map-card></app-map-card>
+    <app-map-card></app-map-card>
+  </div>
+
+</div>
+
+
 
 
