--- a/src/app/common-ui/map-card/map-card.scss
+++ b/src/app/common-ui/map-card/map-card.scss
@@ -1,4 +1,10 @@
-.map-card{
-  padding: 20px;
+.map-wrapper{
+  display: flex;
+  justify-content: center;
 }
 
+.map-card{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
