--- a/src/app/pages/main-page/main-page.scss
+++ b/src/app/pages/main-page/main-page.scss
@@ -1,1 +1,11 @@
+.main-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+}
 
+.container{
+  width: 80%;
+  margin: 0 auto;
+}
