Главная страница, категории, ленту допилил

--- a/src/app/common-ui/adverticement-card/adverticement-card.html
+++ b/src/app/common-ui/adverticement-card/adverticement-card.html
@@ -3,7 +3,7 @@
   tuiAppearance="floating"
   >
 
-  @if (advertisement.imagesId?.imageUrls) {
+  @if (advertisement.imagesId.imageUrls) {
     <img
       [src]="advertisement.imagesId.imageUrls[0]"
       class="adv-image"
