--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -19,58 +19,67 @@
       </div>
     </div>
 
-    <div class="cards-block">
 
 
-      <div class="sort">
-        Сортировка:
 
-        <button
-          appearance="positive"
-          size="s"
-          tuiIconButton
-          tuiButton
-          tuiChevron
-          type="button"
-          [tuiDropdown]="dropdownContentProfile"
-          [tuiDropdownManual]="openProfile"
-          [tuiObscuredEnabled]="openProfile"
-          (click)="onClickProfile ()"
-          (tuiActiveZoneChange)="onActiveZoneProfile($event)"
-          (tuiObscured)="onObscuredProfile($event)"
-        >
-          По цене
-          <ng-template #dropdownContentProfile>
-            <div class="dropdown-buttons">
-              <button
-                class="profile-button"
-                appearance="flat-grayscale"
-                tuiButton
-                type="button"
-                size="s"
-                (click)="toDorogo()"
-              >
-                Подороже
-              </button>
-
-              <button
-                class="profile-button"
-                appearance="flat-grayscale"
-                tuiButton
-                type="button"
-                size="s"
-                (click)="toDeshevo()"
-              >
-                Подешевле
-              </button>
-
-            </div>
-          </ng-template>
-
-        </button>
-      </div>
 
       <div class="cards-container">
+
+        <div class="cards-block">
+
+          <app-navigation
+            [categoryId]="currentCategory"
+          ></app-navigation>
+
+          <div class="sort">
+            Сортировка:
+
+            <button
+              appearance="positive"
+              size="s"
+              tuiIconButton
+              tuiButton
+              tuiChevron
+              type="button"
+              [tuiDropdown]="dropdownContentProfile"
+              [tuiDropdownManual]="openProfile"
+              [tuiObscuredEnabled]="openProfile"
+              (click)="onClickProfile ()"
+              (tuiActiveZoneChange)="onActiveZoneProfile($event)"
+              (tuiObscured)="onObscuredProfile($event)"
+            >
+              По цене
+              <ng-template #dropdownContentProfile>
+                <div class="dropdown-buttons">
+                  <button
+                    class="profile-button"
+                    appearance="flat-grayscale"
+                    tuiButton
+                    type="button"
+                    size="s"
+                    (click)="toDorogo()"
+                  >
+                    Подороже
+                  </button>
+
+                  <button
+                    class="profile-button"
+                    appearance="flat-grayscale"
+                    tuiButton
+                    type="button"
+                    size="s"
+                    (click)="toDeshevo()"
+                  >
+                    Подешевле
+                  </button>
+
+                </div>
+              </ng-template>
+
+            </button>
+          </div>
+
+
         @if (newAdverticements.length > 0) {
           <div class="cards-container">
             @for (ad of newAdverticements; track ad.id) {
@@ -85,10 +94,8 @@
             }
           </div>
         } @else {
-          <div class="loading-state">
-            <tui-loader
-            size="l"
-            />
+          <div class="cards-container">
+            <h1>Нет объявлений(((</h1>
           </div>
         }
       </div>
