--- a/src/app/pages/feed-page/feed-page.scss
+++ b/src/app/pages/feed-page/feed-page.scss
@@ -9,8 +9,6 @@
   padding: 20px;
 }
 
-
-
 .card-title{
   margin: 0;
 }
@@ -20,6 +18,8 @@
   aspect-ratio: 1 / 1;
   border-radius: 12px;
   margin-bottom: 20px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .tinder-image {
