Главная страница, категории, ленту допилил

--- a/src/app/pages/main-page/main-page.html
+++ b/src/app/pages/main-page/main-page.html
@@ -17,7 +17,7 @@
                   type="button"
                   (click)="toFeedPage()"
           >
-            Жми здесь
+            К ленте
           </button>
         </div>
 
@@ -31,7 +31,7 @@
                   type="button"
                   (click)="toAdvertisementPage()"
           >
-            Тыкай сюда
+            К объявлениям
           </button>
         </div>
 
@@ -45,7 +45,7 @@
                   type="button"
                   (click)="toTasksPage()"
           >
-            Нажимай сюда
+            К заказам
           </button>
         </div>
       </div>
