--- a/src/app/common-ui/navigation/navigation.scss
+++ b/src/app/common-ui/navigation/navigation.scss
@@ -1,4 +1,9 @@
 .category-name{
-  font-size: 16px;
   cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.category-name:hover{
+  text-decoration: underline;
 }
