--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -25,6 +25,7 @@
 
           <app-navigation
             [categoryId]="currentCategory"
+            (toCategory)="setCategory($event)"
           ></app-navigation>
 
           <div class="sort">
