--- a/src/app/pages/one-advertisement-page/one-advertisement-page.html
+++ b/src/app/pages/one-advertisement-page/one-advertisement-page.html
@@ -50,6 +50,7 @@
 
       <app-navigation
       [categoryId]="currentAdvertisement.categoryId"
+      (toCategory)="setCategory($event)"
       ></app-navigation>
 
     </div>
