--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -31,6 +31,18 @@
       </div>
     </div>
 
+    <button
+      class="add-review-button"
+      appearance="primary-grayscale"
+      iconStart="message-circle"
+      size="l"
+      tuiButton
+      type="button"
+      (click)="toContacts()"
+    >
+      Связаться
+    </button>
+
     <div class="reviews-container">
       <h1>Отзывы:</h1>
       <div class="review-cards-container">
