--- a/src/app/pages/task-page/task-page.html
+++ b/src/app/pages/task-page/task-page.html
@@ -15,6 +15,7 @@
 
       <app-navigation
         [categoryId]="currentCategory"
+        (toCategory)="setCategory($event)"
       ></app-navigation>
 
       @if (newTasks){
