--- a/src/app/pages/create/create-advertisement-page/create-advertisement-page.html
+++ b/src/app/pages/create/create-advertisement-page/create-advertisement-page.html
@@ -2,7 +2,9 @@
   <div class="create-card">
 
     <div class="choose-type">
-      <tui-segmented class="choose-create-type">
+      <tui-segmented
+        class="choose-create-type"
+        size="m">
         <button
           class="choose-type-button"
           type="button"
