--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -65,10 +65,11 @@
     </div>
 
 
-    <div class="choose-type">
+    <div class="choose-type" style="margin-top: 30px">
       <tui-segmented
         size="m"
         class="choose-create-type">
+
         <button
           class="choose-type-button"
           type="button"
