--- a/src/app/pages/my-tasks-page/my-task-card/my-task-card.html
+++ b/src/app/pages/my-tasks-page/my-task-card/my-task-card.html
@@ -1,69 +1,103 @@
 <div class="very-main-container">
   <div class="main-container">
-
-
-
-    @if (contentType == 'myTasks'){
-    @for(task of tasks; track task){
-      <div
-        class="card-container"
-        tuiAppearance="floating"
-      >
-        <div class="task-container">
-          <div class="card-text-left">
-            <div>
-              <h1>{{task.title}}</h1>
-              <div class="card-description">{{task.description}}</div>
+    @if (tasks.length > 0){
+      @for(task of tasks; track task){
+        <div
+          class="card-container"
+          tuiAppearance="floating"
+        >
+          <div class="task-container">
+            <div class="card-text-left">
+              <div>
+                <h1>{{task.title}}</h1>
+                <div class="card-description">{{task.description}}</div>
+              </div>
+              <div class="card-price">{{task.price}} ₽</div>
             </div>
-            <div class="card-price">{{task.price}} ₽</div>
-          </div>
 
-          <div class="card-text-right">
-            <button
-              class="answer-button"
-              appearance="primary-grayscale"
-              size="l"
-              tuiButton
-              type="button"
-              (click)="responseTask(task.id)"> Откликнуться
-            </button>
+            <div class="card-text-right">
 
-            <div>
-              <div class="card-description">Откликов: {{task.workers.length}}</div>
 
-              <div class="card-description">Дедлайн: 18.01.26</div>
+              <div>
+                <div class="card-description">Откликов: {{task.workers.length}}</div>
 
+                <div class="card-description">Дедлайн: 18.01.26</div>
+
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="workers-container">
-          <div class="divider"></div>
-          <h1 style="margin-left: 20px">Отклики:</h1>
+          <div class="workers-container">
+            <div class="divider"></div>
 
-          @if (task.workers.length > 0){
-            @for (worker of task.workers; track worker.id) {
+            @if (!task.acceptedWorker){
+
+              <h1 style="margin-left: 20px">Отклики:</h1>
+
+              @if (task.workers.length > 0){
+                @for (worker of task.workers; track worker.id) {
+                  <div class="worker-card">
+                    <div class="left-user-profile">
+                      <app-profile-card
+                        [id]="worker.id"
+                      ></app-profile-card>
+                    </div>
+
+                    <div class="right-response-actions">
+
+                      <button
+                        class="buttons"
+                        appearance="positive"
+                        iconStart="@tui.check"
+
+                        tuiIconButton
+                        type="button"
+                        [style.border-radius.%]="100"
+                        (click)="confirmWorker(worker.id, task.id)"
+                      >
+                        Favorite
+                      </button>
+
+                      <button
+                        class="buttons"
+                        appearance="secondary-grayscale"
+                        iconStart="@tui.message-circle"
+
+                        tuiIconButton
+                        type="button"
+                        [style.border-radius.%]="100"
+                        (click)="getContacts()"
+                      >
+                        Favorite
+                      </button>
+
+                      <button
+                        class="buttons"
+                        appearance="secondary-destructive"
+                        iconStart="@tui.x"
+
+                        tuiIconButton
+                        type="button"
+                        [style.border-radius.%]="100"
+                        (click)="removeWorker(task.id, worker.id)"
+                      >
+                        Favorite
+                      </button>
+                    </div>
+                  </div>
+                }
+              }@else{
+                <h2 style="margin-left: 20px; color: #939393; font-weight: 500" >Пока никто не откликнулся</h2>
+              }
+            } @else {
               <div class="worker-card">
                 <div class="left-user-profile">
                   <app-profile-card
-                    [id]="worker.id"
+                    [id]="task.acceptedWorker.id"
                   ></app-profile-card>
                 </div>
 
                 <div class="right-response-actions">
-                  <button
-                    class="buttons"
-                    appearance="positive"
-                    iconStart="@tui.check"
-
-                    tuiIconButton
-                    type="button"
-                    [style.border-radius.%]="100"
-                    (click)="confirmWorker()"
-                  >
-                    Favorite
-                  </button>
-
                   <button
                     class="buttons"
                     appearance="secondary-grayscale"
@@ -72,35 +106,21 @@
                     tuiIconButton
                     type="button"
                     [style.border-radius.%]="100"
-                    (click)="confirmWorker()"
-                  >
-                    Favorite
-                  </button>
-
-                  <button
-                    class="buttons"
-                    appearance="secondary-destructive"
-                    iconStart="@tui.x"
-
-                    tuiIconButton
-                    type="button"
-                    [style.border-radius.%]="100"
-                    (click)="confirmWorker()"
+                    (click)="getContacts()"
                   >
                     Favorite
                   </button>
                 </div>
               </div>
-          }
-          }@else{
-            <h2 style="margin-left: 20px; color: #939393; font-weight: 500" >Пока никто не откликнулся</h2>
-          }
-        </div>
-      </div>
-    }
-    } @else {
 
+            }
+          </div>
+        </div>
       }
+    }
+    @else{
+      <h1 style="color: #939393" >У вас пока нет заказов...</h1>
+    }
   </div>
 </div>
 
